Theme: Polls overlap fix

--- a/docroot/sites/all/themes/opensource/sass/components/_polls.scss
+++ b/docroot/sites/all/themes/opensource/sass/components/_polls.scss
@@ -12,4 +12,14 @@
             background-image: url('../images/comment.jpg') no-repeat left center;
         }
     }
+
+    .total {
+        padding-top: 2em;
+        position: relative;
+        top: -2em;
+    }
+
+    .submit {
+        float: left;
+    }
 }
